--- a/minikube.yml
+++ b/minikube.yml
@@ -28,7 +28,8 @@
 
   - name: Install Docker-CE
     apt:
-      name: docker-ce=17.03.2~ce-0~ubuntu-xenial
+      # name: docker-ce=17.03.2~ce-0~ubuntu-xenial
+      name: docker-ce=17.12.1~ce-0~ubuntu
       state: present
       update_cache: yes
 
