--- a/minikube.yml
+++ b/minikube.yml
@@ -14,17 +14,11 @@
     apt_repository:
       repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ansible_distribution_release}} stable
 
-  - name: Install list of packages
+  - name: Install packages
     apt:
-      name: "{{ item }}"
+      name: ['apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'nfs-common']
       state: present
       update_cache: yes
-    with_items:
-      - apt-transport-https
-      - ca-certificates
-      - curl
-      - software-properties-common
-      - nfs-common
 
   - name: Install Docker-CE
     apt:
@@ -66,7 +60,7 @@
   #
   - name: download
     get_url:
-      url: https://storage.googleapis.com/kubernetes-release/release/v1.11.2/bin/linux/amd64/kubectl
+      url: https://storage.googleapis.com/kubernetes-release/release/v1.13.4/bin/linux/amd64/kubectl
       dest: /usr/local/bin/
       mode: 0755
       owner: root
