--- a/minikube.yml
+++ b/minikube.yml
@@ -23,7 +23,8 @@
   - name: Install Docker-CE
     apt:
       # name: docker-ce=17.03.2~ce-0~ubuntu-xenial
-      name: docker-ce=17.12.1~ce-0~ubuntu
+      # name: docker-ce=17.12.1~ce-0~ubuntu
+      name: docker-ce=18.06.2~ce~3-0~ubuntu      
       state: present
       update_cache: yes
 
